Fix flickering

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -64,7 +64,7 @@ header {
       .display-flex();
       .align-items(center);
       .justify-content(space-around);
-
+      padding: 5px;
 
       text-align: center;
       @media @mobile {
@@ -75,6 +75,7 @@ header {
       .vs {
         font-size: 18px;
         font-weight: 900;
+        .flex(0 0 100px);
       }
 
 
@@ -83,39 +84,45 @@ header {
       }
 
       input.team-radio + label {
+        
         text-transform: uppercase;
         font-size: 13px;
         font-weight: 900;
         padding-bottom: 30px;
-
+        position: relative;
         img {
-          width: 100%;
-          margin: 3px;
-          padding: 5px;
-          transform: scale(.8);
+          border-radius: 50%;
           transition: all .2s ease-in-out;
           &:hover {
-            transform: scale(1);
+            transform: scale(1.2);
+            -webkit-transform: scale(1.2);
           }
         }
+        
+
       }
 
       input.team-radio:checked + label {
         img {
-          border: 4px solid fade(#69BE28, 60%);
-          transform: scale(.8);
+          background: fade(#69BE28, 60%);
         }
+
       }
     }
 
     .expert-box {
-      background: fade(#dbdddf, 60%);
+      display:none;
+      background: #002244;
       font-size: 12px;
       font-weight: 900;
       text-align: center;
       text-transform: uppercase;
       padding: 5px 0;
       
+      &.selected {
+        display: block;
+        background: fade(#dbdddf, 60%);
+      }
       .experts {
         img {
           width: 10%;
